corrected change color and star alignement

--- a/frontend/src/app/components/details/details.component.css
+++ b/frontend/src/app/components/details/details.component.css
@@ -55,7 +55,7 @@
 
 .star-icon {
     position: relative;
-    bottom: 0.5em;
+    bottom: 0em;
 }
 .star-icon a, a:hover, a:focus, a:active {
     text-decoration: none;
